--- a/tpro-app/src/main/webapp/template/basicLayout.xhtml
+++ b/tpro-app/src/main/webapp/template/basicLayout.xhtml
@@ -4,6 +4,7 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:c="http://java.sun.com/jsp/jstl/core"
       xmlns:p="http://primefaces.org/ui">
   <h:head>
     <meta charset="utf-8"/>
@@ -36,11 +37,39 @@
 	            <span class="icon-bar"></span>
 	            <span class="icon-bar"></span>
 	          </button>
-	          <a class="navbar-brand" href="#">TPro</a>
+	          <p:link class="navbar-brand" outcome="/index" value="TPro" />
 	        </div>
 	        <div id="navbar" class="collapse navbar-collapse">
-	          <ul class="nav navbar-nav">
-	          </ul>
+	        	<!-- Render Navigation Items Only For Logged In Users -->
+	        	<c:if test="#{loginMB.loggedIn}">
+		          <ul class="nav navbar-nav">
+		          	  <!-- Admin Navigation Items -->
+		          	  <c:if test="#{loginMB.loggedInAsAdmin}">
+			          	  <li>
+		          			<p:link outcome="/admin/plugin-management" value="Dienste verwalten" />
+				    	  </li>
+			          	  <li>
+		          			<p:link outcome="/admin/user-management" value="Nutzer verwalten" />
+				    	  </li>
+		          	  </c:if>
+			    	  <!-- User Navigation Items -->
+		          	  <c:if test="#{!loginMB.loggedInAsAdmin}">
+			          	  <li>
+		          			<p:link outcome="/user/dashboard" value="Dashboard" />
+				    	  </li>
+				          <li class="dropdown">
+			        		<a class="dropdown-toggle" data-toggle="dropdown" href=""> Dienste <span class="caret"></span></a>
+					        <ul class="dropdown-menu">
+					          	<ui:repeat var="plugin" value="#{pluginManagementService.getAllPlugins()}">
+					          		<li rendered="#{true}"> <!-- TODO: RENDER ONLY IF PERMISSIONS -->
+					          			<p:link outcome="/plugin/#{plugin.name}/index" value="#{plugin.title}" />
+							    	</li>
+					          	</ui:repeat>
+					        </ul>
+					      </li>
+		          	  </c:if>
+		          </ul>
+	        	</c:if>
 	          <h:form id="loginForm" class="navbar-form navbar-right" rendered="#{!loginMB.loggedIn}">
 	            <div class="form-group">
 	              <p:inputText id="username" value="#{credentials.username}" placeholder="Benutzername" class="form-control"/>
@@ -49,24 +78,28 @@
 	              <p:password id="password" value="#{credentials.password}" placeholder="Passwort" class="form-control"/>
 	            </div>
 	            <div class="form-group">
-	              <p:commandButton class="btn btn-success form-control" value="Anmelden" ajax="true" action="#{loginMB.login}" process="loginForm" update="loginForm" rendered="#{!loginMB.loggedIn}"/>
+	              <p:commandButton class="btn btn-success form-control" icon="fa fa-fw fa-sign-in" value="Anmelden" ajax="true" action="#{loginMB.login}" process="loginForm" rendered="#{!loginMB.loggedIn}"/>
 	            </div>
 	          </h:form>
 			  <h:form id="logoutForm" class="navbar-form navbar-right" rendered="#{loginMB.loggedIn}">
 	            <div class="form-group">
-				  <p:commandButton class="btn btn-default form-control" value="Abmelden" ajax="false" action="#{loginMB.logout}"/>
+				  <p:commandButton class="btn btn-default form-control" icon="fa fa-fw fa-sign-out" value="Abmelden" ajax="true" action="#{loginMB.logout}"/>
 			    </div>
 			  </h:form>
 	        </div><!--/.nav-collapse -->
         </ui:insert>
       </div>
     </nav>
+    
+    <!-- UI Toast Messages -->
+    <h:form>
+	  	<p:growl autoUpdate="true" life="3000" />
+    </h:form>
   	
   	<!-- page content -->
    	<ui:insert name="content"/>
     
     <!-- Bootstrap core JavaScript - Will be placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <h:outputScript name="bootstrap-3.3.7-dist/js/bootstrap.min.js"/>
   </h:body>
 </html>
