--- a/tpro-app/src/main/webapp/template/tpro-basic-layout.xhtml
+++ b/tpro-app/src/main/webapp/template/tpro-basic-layout.xhtml
@@ -1,109 +1,123 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:c="http://java.sun.com/jsp/jstl/core"
-      xmlns:p="http://primefaces.org/ui">
-  <h:head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="Teaching Promoter (TPro)"/>
-    <meta name="author" content="Michael Baumert (student at HTW Berlin)"/>
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:c="http://java.sun.com/jsp/jstl/core"
+	xmlns:p="http://primefaces.org/ui">
+<h:head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+	<meta name="description" content="Teaching Promoter (TPro)" />
+	<meta name="author" content="Michael Baumert (student at HTW Berlin)" />
 
-    <!-- Bootstrap core CSS -->
-    <h:outputStylesheet name="bootstrap-3.3.7-dist/css/bootstrap.min.css"/>
-    <!-- Bootstrap theme -->
-    <h:outputStylesheet name="bootstrap-3.3.7-dist/css/bootstrap-theme.min.css"/>
-    
-    <!-- Custom styles for this template -->
-    <h:outputStylesheet name="css/basic-layout.css"/>
-    
-    <f:verbatim></f:verbatim>
-    <ui:insert name="additional-head-content"/>
-  </h:head>
-  <h:body>
-  	<nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <ui:insert name="navbar-content">
-	        <div class="navbar-header">
-	          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-	            <span class="sr-only">Toggle navigation</span>
-	            <span class="icon-bar"></span>
-	            <span class="icon-bar"></span>
-	            <span class="icon-bar"></span>
-	          </button>
-	          <p:link class="navbar-brand" outcome="/index" value="TPro" />
-	        </div>
-	        <div id="navbar" class="collapse navbar-collapse">
-	        	<!-- Render Navigation Items Only For Logged In Users -->
-	        	<c:if test="#{userMB.loggedIn}">
-		          <ul class="nav navbar-nav">
-		          	<!-- Admin Navigation Items -->
-		          	<c:choose>
-		          	  <c:when test="#{userMB.loggedInAsAdmin}">
-			          	  <li>
-		          			<p:link outcome="#{navigation.goToAdminHomePage()}" value="Dienste verwalten" />
-				    	  </li>
-			          	  <li>
-		          			<p:link outcome="#{navigation.goToUserManagementPage()}" value="Nutzer verwalten" />
-				    	  </li>
-		          	  </c:when>
-			    	  <!-- User Navigation Items -->
-		          	  <c:otherwise>
-			          	  <li>
-		          			<p:link outcome="#{navigation.goToUserHomePage()}" value="Dashboard" />
-				    	  </li>
-				    	  <c:if test="#{pluginService.getPluginsAccessableByUserWithUsername(userMB.currentUser.username) != null}">
-						      <li class="dropdown">
-						        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Meine Dienste
-						        <span class="caret"></span></a>
-						        <ul class="dropdown-menu">
-						          <ui:repeat var="plugin" value="#{pluginService.getPluginsAccessableByUserWithUsername(userMB.currentUser.username)}">
-					          		<li>
-					          			<p:link outcome="#{navigation.goToPluginPage(plugin.name)}" value="#{plugin.title}" />
-							    	</li>
-						          </ui:repeat>
-						        </ul>
-						      </li>
-			          	  </c:if>
-		          	  </c:otherwise>
-		          	</c:choose>
-		          	
-		          </ul>
-	        	</c:if>
-	          <h:form id="loginForm" class="navbar-form navbar-right" rendered="#{!userMB.loggedIn}">
-	            <div class="form-group">
-	              <p:inputText id="username" value="#{credentials.username}" placeholder="Benutzername" class="form-control"/>
-	            </div>
-	            <div class="form-group">
-	              <p:password id="password" value="#{credentials.password}" placeholder="Passwort" class="form-control"/>
-	            </div>
-	            <div class="form-group">
-	              <p:commandButton class="btn btn-success form-control" icon="fa fa-fw fa-sign-in" value="Anmelden" action="#{userMB.login}" process="loginForm" rendered="#{!userMB.loggedIn}"/>
-	            </div>
-	          </h:form>
-			  <h:form id="logoutForm" class="navbar-form navbar-right" rendered="#{userMB.loggedIn}">
-	            <div class="form-group">
-				  <p:commandButton class="btn btn-default form-control" icon="fa fa-fw fa-sign-out" value="Abmelden" action="#{userMB.logout}"/>
-			    </div>
-			  </h:form>
-	        </div><!--/.nav-collapse -->
-        </ui:insert>
-      </div>
-    </nav>
-    
-    <!-- UI Toast Messages -->
-    <h:form>
-	  	<p:growl autoUpdate="true" life="3000" />
-    </h:form>
-  	
-  	<!-- page content -->
-   	<ui:insert name="content"/>
-    
-    <!-- Bootstrap core JavaScript - Will be placed at the end of the document so the pages load faster -->
-    <h:outputScript name="bootstrap-3.3.7-dist/js/bootstrap.min.js"/>
-  </h:body>
+	<!-- Bootstrap core CSS -->
+	<h:outputStylesheet name="bootstrap-3.3.7-dist/css/bootstrap.min.css" />
+	<!-- Bootstrap theme -->
+	<h:outputStylesheet
+		name="bootstrap-3.3.7-dist/css/bootstrap-theme.min.css" />
+
+	<!-- Custom styles for this template -->
+	<h:outputStylesheet name="css/basic-layout.css" />
+
+	<f:verbatim></f:verbatim>
+	<ui:insert name="additional-head-content" />
+</h:head>
+<h:body>
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+	<div class="container">
+		<ui:insert name="navbar-content">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed"
+					data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+					aria-controls="navbar">
+					<span class="sr-only">Toggle navigation</span> <span
+						class="icon-bar"></span> <span class="icon-bar"></span> <span
+						class="icon-bar"></span>
+				</button>
+				<p:link class="navbar-brand" outcome="/index" value="TPro" />
+			</div>
+			<div id="navbar" class="collapse navbar-collapse">
+				<!-- Render Navigation Items Only For Logged In Users -->
+				<c:if test="#{userMB.loggedIn}">
+					<ul class="nav navbar-nav">
+						<!-- Admin Navigation Items -->
+						<c:choose>
+							<c:when test="#{userMB.loggedInAsAdmin}">
+								<li><p:link outcome="#{navigation.goToAdminHomePage()}"
+										value="Dienste verwalten" /></li>
+								<li><p:link
+										outcome="#{navigation.goToUserManagementPage()}"
+										value="Nutzer verwalten" /></li>
+								<li><p:link
+										outcome="#{navigation.goToGroupManagementPage()}"
+										value="Gruppen verwalten" /></li>
+							</c:when>
+							<!-- User Navigation Items -->
+							<c:otherwise>
+								<li><p:link outcome="#{navigation.goToUserHomePage()}"
+										value="Dashboard" /></li>
+								<c:if
+									test="#{pluginService.getPluginsAccessableByUserWithUsername(userMB.currentUser.username) != null}">
+									<li class="dropdown"><a class="dropdown-toggle"
+										data-toggle="dropdown" href="#">Meine Dienste <span
+											class="caret"></span></a>
+										<ul class="dropdown-menu">
+											<ui:repeat var="plugin"
+												value="#{pluginService.getPluginsAccessableByUserWithUsername(userMB.currentUser.username)}">
+												<li><p:link
+														outcome="#{navigation.goToPluginPage(plugin.name)}"
+														value="#{plugin.title}" /></li>
+											</ui:repeat>
+										</ul></li>
+								</c:if>
+							</c:otherwise>
+						</c:choose>
+
+					</ul>
+				</c:if>
+				<h:form id="loginForm" class="navbar-form navbar-right"
+					rendered="#{!userMB.loggedIn}">
+					<div class="form-group">
+						<p:inputText id="username" value="#{credentials.username}"
+							placeholder="Benutzername" class="form-control" />
+					</div>
+					<div class="form-group">
+						<p:password id="password" value="#{credentials.password}"
+							placeholder="Passwort" class="form-control" />
+					</div>
+					<div class="form-group">
+						<p:commandButton class="btn btn-success form-control"
+							icon="fa fa-fw fa-sign-in" value="Anmelden"
+							action="#{userMB.login}" process="loginForm"
+							rendered="#{!userMB.loggedIn}" />
+					</div>
+				</h:form>
+				<h:form id="logoutForm" class="navbar-form navbar-right"
+					rendered="#{userMB.loggedIn}">
+					<div class="form-group">
+						<p:commandButton class="btn btn-default form-control"
+							icon="fa fa-fw fa-sign-out" value="Abmelden"
+							action="#{userMB.logout}" />
+					</div>
+				</h:form>
+			</div>
+			<!--/.nav-collapse -->
+		</ui:insert>
+	</div>
+	</nav>
+
+	<!-- UI Toast Messages -->
+	<h:form>
+		<p:growl autoUpdate="true" life="3000" />
+	</h:form>
+
+	<!-- page content -->
+	<ui:insert name="content" />
+
+	<!-- Bootstrap core JavaScript - Will be placed at the end of the document so the pages load faster -->
+	<h:outputScript name="bootstrap-3.3.7-dist/js/bootstrap.min.js" />
+</h:body>
 </html>
