Added TPro Logo

--- a/tpro-app/src/main/webapp/template/tpro-basic-layout.xhtml
+++ b/tpro-app/src/main/webapp/template/tpro-basic-layout.xhtml
@@ -37,7 +37,9 @@
 						class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 				</button>
-				<p:link class="navbar-brand" outcome="/index" value="TPro" />
+		          <p:link class="navbar-brand" outcome="/index">
+		          	<p:graphicImage class="img img-responsive" name="img/tpro-white-logo.png" alt="TPro" style="height: 100%"/>
+		          </p:link>
 			</div>
 			<div id="navbar" class="collapse navbar-collapse">
 				<!-- Render Navigation Items Only For Logged In Users -->
